--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 </head>
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" id="headerText">This is the top text, HTML ID headerText.</h5>
+                <button class="btn btn-primary" id="btn1">This is the first button, ID btn1</button>
+                <p id="helperText">This is the secondary, helper text.</p>
+                <button class="btn btn-primary" id="btn2">This is the second button, ID btn2</button>
+            </div>
+        </div>
+    </div> <!-- End Container -->
 </body>
 </html>
