DOM manipulation figured out based on state

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
             </div>
         </div>
     </div> <!-- End Container -->
+    <button onclick="updateState(0)">Page 1</button>
+    <button onclick="updateState(1)">Page 2</button>
+    <button onclick="updateState(2)">Page 3</button>
+    <button onclick="updateState(3)">Page 4</button>
+    <button onclick="updateState(4)">Page 5</button>
+    <button onclick="updateState(5)">Page 6</button>
 </body>
 </html>
