--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title" id="headerText"></h5>
-                <button class="btn btn-primary" id="btn1"></button>
+                <button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button>
                 <p id="helperText"></p>
-                <button class="btn btn-primary" id="btn2"></button>
+                <button class="btn btn-primary" id="btn2" onclick="updateState(2)"></button>
             </div>
         </div>
     </div> <!-- End Container -->
+    <!-- (Test Buttons)
     <button onclick="updateState(0)">Page 1</button>
     <button onclick="updateState(1)">Page 2</button>
     <button onclick="updateState(2)">Page 3</button>
     <button onclick="updateState(3)">Page 4</button>
     <button onclick="updateState(4)">Page 5</button>
     <button onclick="updateState(5)">Page 6</button>
+    -->
 </body>
 </html>
