Working on HTML

--- a/index.html
+++ b/index.html
@@ -25,16 +25,39 @@
 </head>
 <body>
     <div class="container">
+        <div class="row h-50 overflow-auto">
+            <div class="col" id="headerText"></div>
+        </div>
+
+        <div class="row">
+            <button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button>
+        </div>
+
+        <div class="row" id="helperText"></div>
+
+        <div class="row">
+            <button class="btn btn-primary" id="btn2" onclick="updateState(2)"></button>
+        </div>
+    </div>
+
+
+
+<!--
+    <div class="container">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title" id="headerText"></h5>
+                <div class="min-vh-75 overflow-auto">
+                    <h2 class="card-title" id="headerText"></h2>
+                </div>
                 <button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button>
                 <p id="helperText"></p>
                 <button class="btn btn-primary" id="btn2" onclick="updateState(2)"></button>
             </div>
         </div>
     </div> <!-- End Container -->
-    <div id="testBoxForIcons"></div>
+
+
+    <!-- <div id="testBoxForIcons"></div> -->
     <!-- (Test Buttons)
     <button onclick="updateState(0)">Page 1</button>
     <button onclick="updateState(1)">Page 2</button>
