--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 </head>
 <body>
-    <div class="container">
-        <div class="row h-50 overflow-auto">
+    <div class="container text-center">
+        <div class="row h-50 overflow-auto symbol-box">
             <div class="col" id="headerText"></div>
         </div>
 
