Working on wireframe

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row" id="helperText"></div>
 
         <div class="row">
-            <button class="btn btn-primary" id="btn2" onclick="updateState(2)"></button>
+            <button class="btn btn-primary round-button" id="btn2" onclick="updateState(2)"></button>
         </div>
     </div>
 
