--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
 
 </head>
 <body>
-    <div class="container text-center">
-        <div class="row h-50 overflow-auto symbol-box">
-            <div class="col" id="headerText"></div>
+    <div class="container-flex">
+        <div class="row symbol-box">
+            <div class="col align-content-center" id="headerText"></div>
         </div>
 
-        <div class="row">
-            <button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button>
+        <div class="row justify-content-center">
+            <div class="col d-flex justify-content-center"><button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button></div>
         </div>
 
-        <div class="row" id="helperText"></div>
+        <div class="row justify-content-center">
+            <div class="col helper-text" id="helperText"></div>
+        </div>
 
-        <div class="row">
-            <button class="btn btn-primary round-button" id="btn2" onclick="updateState(2)"></button>
+        <div class="row justify-content-center">
+            <div class="col d-flex justify-content-center">
+                <button class="btn btn-primary justify-content-center" id="btn2" onclick="updateState(2)"></button>
+            </div>
         </div>
     </div>
 
