--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container-flex">
         <div class="row symbol-box">
-            <div class="col align-content-center" id="headerText"></div>
+            <div class="col align-content-center display-5 box-height padding-top-5" id="headerText"></div>
         </div>
 
         <div class="row justify-content-center">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col helper-text" id="helperText"></div>
+            <div class="col helper-text box-height" id="helperText"></div>
         </div>
 
         <div class="row justify-content-center">
@@ -44,31 +44,5 @@
         </div>
     </div>
 
-
-
-<!--
-    <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <div class="min-vh-75 overflow-auto">
-                    <h2 class="card-title" id="headerText"></h2>
-                </div>
-                <button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button>
-                <p id="helperText"></p>
-                <button class="btn btn-primary" id="btn2" onclick="updateState(2)"></button>
-            </div>
-        </div>
-    </div> <!-- End Container -->
-
-
-    <!-- <div id="testBoxForIcons"></div> -->
-    <!-- (Test Buttons)
-    <button onclick="updateState(0)">Page 1</button>
-    <button onclick="updateState(1)">Page 2</button>
-    <button onclick="updateState(2)">Page 3</button>
-    <button onclick="updateState(3)">Page 4</button>
-    <button onclick="updateState(4)">Page 5</button>
-    <button onclick="updateState(5)">Page 6</button>
-    -->   
 </body>
 </html>
