Refactored using buildUI()

--- a/index.html
+++ b/index.html
@@ -24,25 +24,6 @@
 
 </head>
 <body>
-    <div class="container-flex">
-        <div class="row symbol-box">
-            <div class="col align-content-center display-5 box-height padding-top-5" id="headerText"></div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col d-flex justify-content-center"><button class="btn btn-primary" id="btn1" onclick="updateState(1)"></button></div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col helper-text box-height" id="helperText"></div>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col d-flex justify-content-center">
-                <button class="btn btn-primary justify-content-center" id="btn2" onclick="updateState(2)"></button>
-            </div>
-        </div>
-    </div>
-
+    <div id="main"></div>
 </body>
 </html>
